--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -28,10 +28,10 @@
                     <a class="nav-link text-white" id="custom-tabs-two-ProductList-tab" data-toggle="pill" href="#custom-tabs-two-ProductList" role="tab" aria-controls="custom-tabs-two-ProductList" aria-selected="false">Product</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-MeasurementList-tab" data-toggle="pill" href="#custom-tabs-two-MeasurementList" role="tab" aria-controls="custom-tabs-two-MeasurementList" aria-selected="false">Measurement</a>
+                    <a class="nav-link text-white" id="custom-tabs-two-MeasurementList-tab" data-toggle="pill" href="#custom-tabs-two-MeasurementList" role="tab" aria-controls="custom-tabs-two-MeasurementList" aria-selected="false">Pack Size</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-Accessories-tab" data-toggle="pill" href="#custom-tabs-two-Accessories" role="tab" aria-controls="custom-tabs-two-Accessories" aria-selected="false">Accessories</a>
+                    <a class="nav-link text-white" id="custom-tabs-two-Accessories-tab" data-toggle="pill" href="#custom-tabs-two-Accessories" role="tab" aria-controls="custom-tabs-two-Accessories" aria-selected="false">Gift</a>
                 </li>
             </ul>
         </div>
