--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
@@ -217,7 +217,7 @@
                                 window.open('/AgroConfiguration/MoneyReciptReport?moneyRecipt=' + moneyRecipt, '_blank');
 
                                 setTimeout(function () {
-                                    redirectPage('@Url.Action("SalesPaymentCreate")');
+                                    redirectPage('@Url.Action("MoneyReceiptList")');
                                 }, 500);
 
                             }
