--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ERPBO.Agriculture.ViewModels.RawMaterialTrackViewModel>
 
 @{
-    ViewBag.Title = "List of RawMaterial Stock";
+    ViewBag.Title = "List of RawMaterial Stock Price";
     var SL = 0;
 }
 <div class="row">
