--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -571,9 +571,10 @@
 
 
                 let proid = $("#ddlProductName option:selected").val();
+                let measurmentId = $("#ddlMeasurementName option:selected").val();
                 let fgrid = FGRId;
-                 // debugger;
-                var data = { pid: TryParseInt(proid, 0), rid: TryParseInt(fgrid, 0) };
+                // debugger;
+                var data = { pid: TryParseInt(proid, 0), rid: TryParseInt(fgrid, 0), measureMentId: TryParseInt(measurmentId, 0) };
                 $.when(getReqWithData('Html', "Get", "/AgroConfiguration/ProductPrice", data)).then(function (res, status) {
 
 
