--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -95,6 +95,13 @@
                                         <div class="col-md-2">
                                             @Html.DropDownList("ddlProductList", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, "-Select Product-", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                         </div>
+                                        <div class="col-md-3">
+                                        </div>
+                                        <div class="col-md-2">
+                                        </div>
+                                        <div class="col-md-3">
+                                            <a href="/AgroConfiguration/ProductionPriceCreate" class="das2-btn float-lg-right float-sm-right" id="btnAddNew"><i class="fa fa-plus"></i>Get ProductionPrice</a>
+                                        </div>
 
                                     </div>
 
