--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -19,7 +19,7 @@
                         <div class="row">
                             <div class="col-md-3">
 
-                                <a href="/AgroConfiguration/ProductionPriceList" class="float-left emnDrop-btn" title="Go To List">
+                                <a href="/AgroConfiguration/GetProductFinishGoodList" class="float-left emnDrop-btn" title="Go To List">
                                     <i class="fas fa-arrow-alt-circle-left"></i>
                                 </a>
                             </div>
@@ -45,19 +45,21 @@
                             <div class="card-header text-sm py-1 px-0">
                                 <div class="row justify-content-center">
                                     <div class="col-md-2">
+                                        <label for="ddldate" class="col-form-label text-white pr-0 pb-0 pt-0">
+                                           Date<span style="color:red">*</span>
+                                        </label>
+                                        <div class="input-group input-group-sm ">
+                                            <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" placeholder="Date" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2">
                                         <label for="ddlProductName" class="col-form-label text-white pr-0 pb-0 pt-0">
                                             Product Name<span style="color:red">*</span>
                                         </label>
                                         @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
                                         <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
                                     </div>
-                                    <div class="col-md-2 hide">
-                                        <label for="ddlQtyUnit" class="col-form-label text-white pr-0 pb-0 pt-0">
-                                            Receipe Unit Qty<span style="color:red">*</span>
-                                        </label>
-                                        @Html.DropDownList("ddlQtyUnit", (IEnumerable<SelectListItem>)ViewBag.ddlQtyUnit, "--UnitQty--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                        <span class="error hide req-QtyUnit font-weight-bold">Unit Qty is required!</span>
-                                    </div>
+
                                     <div class="col-md-2">
                                         <label class="col-form-label text-white pr-0 pb-0 pt-0" for="ddlRMtotalprice">RM TotalPRice</label>
                                         <input type="number" id="ddlRMtotalprice" name="ddlRMtotalprice" class="form-control form-control-sm" readonly />
@@ -105,6 +107,7 @@
         var ddlProductName = $("#ddlProductName");
         var ddlotherexpense = $("#ddlotherexpense");
         var ddlRMtotalprice = $("#ddlRMtotalprice");
+        var dptFromDate = $("#dptFromDate");
 
 
 
@@ -118,6 +121,26 @@
             });
             $(function () {
                 $('#ddlProductName').focus();
+            });
+
+
+            dptFromDate.prop('readonly', true);
+
+            dptFromDate.css("background-color", "#fff");
+
+            $('#dptFromDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true
+            }).on('change', function () {
+                $('.datepicker').hide();
+            });
+            $('#dptToDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true
+            }).on('change', function () {
+                $('.datepicker').hide();
             });
 
         })
@@ -149,7 +172,7 @@
 
             let FinishGoodProductId = $("#ddlProductName option:selected").val();
             debugger;
-            var data = { FinishGoodProductId: TryParseInt(FinishGoodProductId, 0) };
+            var data = { FinishGoodProductId: TryParseInt(FinishGoodProductId, 0), EntryDate: dptFromDate.val(), };
             console.log(data);
             $.when(getReqWithData('html', 'GET', '/AgroConfiguration/ProductionPriceCreateTable', data)).then(function (res, status) {
                 console.log(status);
@@ -187,7 +210,7 @@
                         debugger;
 
 
-                        var info = { ProductionPerproductCostId: 0, FinishGoodProductId: TryParseInt(ddlProductName.val(), 0), FGRId: TryParseInt(ddlQtyUnit.val(), 0), PerProductRMtotalCost: ddlRMtotalprice.val(), PerProductOtherCost: ddlotherexpense.val()};
+                        var info = { FinishGoodProductId: TryParseInt(ddlProductName.val(), 0), ProductionOtherExpense: ddlotherexpense.val(), EntryDate: dptFromDate.val() };
 
 
 
@@ -202,7 +225,7 @@
                                 $('.toastrDefaultSuccess').trigger('click');
 
                                 setTimeout(function () {
-                                    redirectPage('@Url.Action("ProductionPriceList")');
+                                    redirectPage('@Url.Action("GetProductFinishGoodList")');
                                 }, 500);
 
                             }
