--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewBag.Title = "List of Finish Good Production List";
     var SL = 0;
+    string badge = string.Empty;
 }
 <div class="row">
     <div class="col-md-12">
@@ -17,12 +18,20 @@
                     <th style="vertical-align:middle">Measurement Name</th>
                     <th style="vertical-align:middle">Qty</th>
                     <th style="vertical-align:middle">Date</th>
+
+                    <th style="vertical-align:middle">RM Price</th>
+                    <th style="vertical-align:middle">Other Expense</th>
+
+
+
                     <th style="vertical-align:middle">Action</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
+              
+                    badge = item.ProductionOtherExpense == 0 ? "badge bg-danger": "";
                     SL = SL + 1;
                     <tr>
 
@@ -33,6 +42,16 @@
                         <td class="text-center">@item.MeasurementName</td>
                         <td class="text-center">@item.TargetQuantity</td>
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
+
+                        <td class="text-center">@item.ProductionRMPrice.ToString("N2")</td>
+
+
+                        <td class="text-center" data-val="@item.ProductionOtherExpense.ToString("N2")">
+                            <span class="@badge">@item.ProductionOtherExpense.ToString("N2")</span>
+                        </td>
+
+
+
                         <td class="text-center">
 
                             <a href="#" class="emndetails-btn data-detail-item-Product" title="View Detail" style="line-height:1" data-detail-item-Product="@item.FinishGoodProductionBatch">
