--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -16,6 +16,10 @@
                     <th>Sales Total</th>
                     <th>Return Total </th>
                     <th>Current Pices </th>
+                    <th>Unit Price</th>
+                    <th>Stock Price</th>
+
+
 
                     @*<th>Action</th>*@
 
@@ -40,6 +44,8 @@
                             <td>@item.SalesTotal</td>
                             <td>@item.ReturnTotal</td>
                             <td>@item.CurrentStock</td>
+                            <td>@item.UnitPrice.ToString("N2")</td>
+                            <td>@item.StockPrice.ToString("N2")</td>
 
                             @*<td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>*@
 
