--- a/ERPWeb/Views/AgroConfiguration/_X.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_X.cshtml
@@ -1,11 +1,11 @@
 ﻿
+
 @model IEnumerable<ERPBO.Agriculture.ViewModels.PaymentMoneyReciptViewModel>
 
 @{
 
     ViewBag.Title = "List of Money Receipt";
     var SL = 0;
-    string badge = string.Empty;
 }
 <div class="row">
     <div class="col-md-12">
@@ -21,7 +21,6 @@
                     <th style="vertical-align:middle">Total Amount</th>
                     @*<th style="vertical-align:middle">Due Amount</th>*@
                     <th style="vertical-align:middle">Date</th>
-                    <th style="vertical-align:middle">Status</th>
                     <th style="vertical-align:middle">Action</th>
                 </tr>
             </thead>
@@ -30,8 +29,6 @@
                 {
 
                     SL = SL + 1;
-                    //badge = item.Status == 0 ? "badge bg-danger" : "";
-                    badge = item.Status == "Pending" ? "badge bg-warning" : item.Status == "Approved" ? "badge bg-success" : item.Status == "Rejected" ? "badge bg-danger" : "";
                     <tr>
 
                         <td class="text-center text-bold">@SL</td>
@@ -44,15 +41,14 @@
                         <td class="text-center">@item.TotalAmount</td>
                         @*<td class="text-center">@item.DueAmount</td>*@
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
-         
-                        <td class="text-center" data-val="@item.Status">
-                            <span class="@badge">@item.Status</span>
-                        </td>
 
-                        <td class="text-center">
+                        @*<td class="text-center">
                             <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.PaymentMoneyReciptId" style="line-height:1">
                                 <i class="fas fa-eye"></i>
                             </a>
+                        </td>*@
+                        <td class="text-center">
+                            <a href="#" class="btn btn-success btn-sm data-edit-item-Return" style="line-height:1" data-edit-item-Return="@item.PaymentMoneyReciptId"><i class="fa-sharp fa-solid fa-bolt"></i>Approve</a>
                         </td>
 
 
